# pySoftness

./: CMakeLists.txt  bindings.cpp  structureFactor.cpp
pySoftness/: structureFactor.py
